crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_param_type_var_tuple_bound.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_param_type_var_tuple_bound.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            13,
        ),
        range: 0..22,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(
                        6,
                    ),
                    range: 0..9,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(
                                1,
                            ),
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..9,
                            node_index: NodeIndex(
                                4,
                            ),
                            type_params: [
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        range: 7..9,
                                        node_index: NodeIndex(
                                            3,
                                        ),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 8..9,
                                            node_index: NodeIndex(
                                                2,
                                            ),
                                        },
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                5,
                            ),
                            range: 9..9,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        9,
                    ),
                    range: 11..14,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                8,
                            ),
                            range: 11..14,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        12,
                    ),
                    range: 18..21,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                11,
                            ),
                            range: 18..21,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | type X[*T: int] = int
  |          ^ Syntax Error: Expected ']', found ':'
  |


  |
1 | type X[*T: int] = int
  |               ^ Syntax Error: Expected a statement
  |


  |
1 | type X[*T: int] = int
  |                 ^ Syntax Error: Expected a statement
  |
